[project]
name = "herobot.agents"
description = "HeroBot AI agents"
authors = [
    {name = "Aashish Loknath Panigrahi",email = "n00bgineer@protonmail.com"}
]
version = "0.0.0"
readme = "readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.30.1,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "uagents (>=0.21.0,<0.22.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "google-genai (>=1.9.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"